RESOLVED FIXED255488
REGRESSION(262860@main): [GTK] icons broken, rendering errors on reddit.com and many other websites, flickering on cnn.com
https://bugs.webkit.org/show_bug.cgi?id=255488
Summary REGRESSION(262860@main): [GTK] icons broken, rendering errors on reddit.com a...
Michael Catanzaro
Reported 2023-04-15 10:47:33 PDT
Since 2.41.2 we often display incorrect icons on reddit.com. I also notice the same bug for the up and downvote icons on issues and merge requests on gitlab.gnome.org. Perhaps a font-related commit may be to blame.
Attachments
screenshot showing correct icons (also shows bug 253446) (43.19 KB, image/png)
2023-04-15 10:51 PDT, Michael Catanzaro
no flags
screenshot showing bug (52.16 KB, image/png)
2023-04-15 10:51 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2023-04-15 10:51:24 PDT
Created attachment 465934 [details] screenshot showing correct icons (also shows bug 253446) Actually I can't figure out how this page displays the icons, but images that are definitely not provided by fonts are broken too, so maybe not related to fonts after all.
Michael Catanzaro
Comment 2 2023-04-15 10:51:37 PDT
Created attachment 465935 [details] screenshot showing bug
Kdwk
Comment 3 2023-04-16 02:32:32 PDT
I'm able to reproduce this issue. Not only the icons and fonts, but basically the entire site is broken and unusable. There are black patches covering up everything from posts to the UI
Michael Catanzaro
Comment 4 2023-04-16 14:45:05 PDT
Surprisingly, this is caused by 262860@main. I'm not sure how a font change could cause such widespread breakage, but it has.
Michael Catanzaro
Comment 5 2023-04-16 14:46:48 PDT
Well, I guess it's not surprising that the font change broke the icons, but it also caused the "basically the entire site is broken and unusable" problem too (screenshots in bug #253446).
Carlos Garcia Campos
Comment 6 2023-04-17 05:39:06 PDT
I can't reproduce it with reddit.
Kdwk
Comment 7 2023-04-17 06:15:29 PDT
I can still reproduce but the issue seems to go away after scrolling for a while.
Michael Catanzaro
Comment 8 2023-04-17 06:58:15 PDT
(In reply to Carlos Garcia Campos from comment #6) > I can't reproduce it with reddit. I patched the GNOME runtime to revert 262860@main and now the bug is gone, so you won't be able to reproduce in Tech Preview anymore. This also fixed emoji on both GitLab and Element. I'll land a revert.
Michael Catanzaro
Comment 9 2023-04-17 08:17:41 PDT
*** Bug 255489 has been marked as a duplicate of this bug. ***
Michael Catanzaro
Comment 10 2023-04-17 09:04:02 PDT
EWS
Comment 11 2023-04-17 14:06:40 PDT
Committed 263036@main (60c2559bd902): <https://commits.webkit.org/263036@main> Reviewed commits have been landed. Closing PR #12806 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.