Cherry-pick 263036@main (60c2559bd902). https://bugs.webkit.org/show_bug.cgi?id=255488

REGRESSION(262860@main): [GTK] icons broken, rendering errors on reddit.com and many other websites, flickering on cnn.com
    https://bugs.webkit.org/show_bug.cgi?id=255488

    Reviewed by Adrian Perez de Castro.

    The second parameter to cairo_scaled_font_text_extents() must be a
    NUL-terminated UTF-8 string.

    * Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp:
    (WebCore::heightOfCharacter):
    (WebCore::Font::platformInit):

    Canonical link: https://commits.webkit.org/263036@main